tests/errors/runtime.IntegerParsingOverflow.art
print 1
print 2
print 1231312371823871236182736128376128736128376
print 4